--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
