--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "concurrently \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.3"
   }
 }
