--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "scripts": {
     "server": "yarn --cwd backend start",
     "client": "yarn --cwd frontend start",
-    "dev": "concurrently \"yarn server\" \"yarn client\""
+    "dev": "concurrently \"yarn server\" \"yarn client\"",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d"
   },
   "dependencies": {
     "colors": "^1.4.0",
