--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.6"
   },
   "scripts": {
