--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "React-Node-Mongodb",
+  "name": "EShop-Demo",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/siyuanwangnz/React-Node-Mongodb.git",
+  "repository": "https://github.com/siyuanwangnz/EShop-Demo.git",
   "author": "SteveW1004 <lmnwsy@gmail.com>",
   "license": "MIT",
   "devDependencies": {
