--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,17 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.6"
   },
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon server",
+    "data:import": "node seeder",
+    "data:destroy": "node seeder -d"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
