--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.6"
+    "mongoose": "^6.6.6",
+    "serverless-http": "^3.1.0"
   },
   "scripts": {
     "start": "nodemon server",
     "data:import": "node seeder",
-    "data:destroy": "node seeder -d"
+    "data:destroy": "node seeder -d",
+    "deploy": "serverless deploy"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
