--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://cpfyqx2wrl.execute-api.ap-southeast-2.amazonaws.com/dev/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
