--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,8 @@
 {
-  "homepage": ".",
+  "homepage": "./home",
   "name": "front",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://cpfyqx2wrl.execute-api.ap-southeast-2.amazonaws.com/dev/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync build/ s3://eshop-demo-bucket"
   },
   "eslintConfig": {
     "extends": [
