--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://eshop-demo-bucket"
+    "s3-deploy": "aws s3 sync build/ s3://eshop-demo-bucket",
+    "cloudfront-invalidation": "aws cloudfront create-invalidation --distribution-id E16EVNQ5R3QQA --paths \"/*\"",
+    "deploy": "yarn build && yarn s3-deploy && yarn cloudfront-invalidation"
   },
   "eslintConfig": {
     "extends": [
