--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 PORT=3000
 REACT_APP_BASE_URL=https://7xfl0cgvei.execute-api.ap-southeast-2.amazonaws.com/dev/
+# REACT_APP_BASE_URL=http://localhost:5000
